# crisper

./: pyproject.toml
benchmarks/: baseline_run1.json  baseline_run2_honest.json  gof_cultivation_test_set.json  gof_first_cultivation.json  opus_api_run.json
paper/: blog-post.md  draft.md
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/skills/cultivate/: SKILL.md
plugin/skills/engineer/: SKILL.md
plugin/skills/eval/: SKILL.md
plugin/skills/score/: SKILL.md
src/crisper/: __init__.py  analyzer.py  archive.py  classifier.py  cli.py  cultivator.py  engineer.py  gene_scorer.py  llm_analyzer.py  monitor.py  persister.py  reflector.py  reviewer.py  scorer.py  session.py  slicer.py  sniper.py  types.py  validator.py  writer.py
src/crisper/conditions/: __init__.py
src/crisper/eval/: __init__.py  api_runner.py  bench.py  rubric.py  runner.py
tests/: test_analyzer.py  test_archive.py  test_cultivator.py  test_gene_scorer.py  test_monitor.py  test_persister.py  test_prompts.py
