[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crisper"
version = "0.1.0"
description = "Crisper Context — scientifically optimal context engineering for Claude Code. Restructure session context for maximum model performance."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["anthropic>=0.40.0"]
authors = [
    { name = "Ruya AI" },
    { name = "Junaid Qureshi" },
]
keywords = ["claude", "claude-code", "context-engineering", "optimization", "llm", "restructuring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]

[project.scripts]
crisper = "crisper.cli:main"

[project.urls]
Homepage = "https://github.com/Ruya-AI/crisper"
Repository = "https://github.com/Ruya-AI/crisper"
Issues = "https://github.com/Ruya-AI/crisper/issues"

[tool.setuptools.packages.find]
where = ["src"]
